src/objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Secondary_Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Secondary Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Description__c</fullName>
        <label>Module Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Module_Duration_in_Days__c</fullName>
        <label>Module Duration in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>